--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,14 @@ h3 {
     color: #41aea9;
 }
 
+hr {
+    border-style: dotted none none;
+    border-top-width: 15px;
+    width: 7%;
+    margin: 60px auto;
+    border-color: #a6f6f1;
+}
+
 a {
     color: #41aea9;
 }
@@ -40,6 +48,62 @@ a {
     position: absolute;
     left: 300px;
     bottom: 300px;
+}
+
+.bottom-container {
+    background-color: #213e3b;
+    padding: 40px;
+}
+
+.btn {
+    background: #3D94F6;
+    background-image: -webkit-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -moz-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -ms-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -o-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -webkit-gradient(to bottom, #3D94F6, #1E62D0);
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    color: #FFFFFF;
+    font-family: Georgia;
+    font-size: 20px;
+    font-weight: 100;
+    padding: 10px;
+    margin-bottom: 40px;
+    -webkit-box-shadow: 1px 1px 20px 0 #000000;
+    -moz-box-shadow: 1px 1px 20px 0 #000000;
+    box-shadow: 1px 1px 20px 0 #000000;
+    text-shadow: 1px 1px 20px #000000;
+    border: solid #337FED 1px;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+ }
+ 
+ .btn:hover {
+    border: solid #337FED 1px;
+    background: #1E62D0;
+    background-image: -webkit-linear-gradient(top, #1E62D0, #3D94F6);
+    background-image: -moz-linear-gradient(top, #1E62D0, #3D94F6);
+    background-image: -ms-linear-gradient(top, #1E62D0, #3D94F6);
+    background-image: -o-linear-gradient(top, #1E62D0, #3D94F6);
+    background-image: -webkit-gradient(to bottom, #1E62D0, #3D94F6);
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    text-decoration: none;
+ }
+
+/*
+.p-left {
+    clear: right;
+}
+*/
+
+.credits {
+    color: #e8ffff;
 }
 
 .skill-image-left {
