--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ h3 {
 hr {
     border-style: dotted none none;
     border-top-width: 15px;
-    width: 7%;
+    width: 5%;
     margin: 60px auto;
     border-color: #a6f6f1;
 }
@@ -57,11 +57,11 @@ a {
 
 .btn {
     background: #3D94F6;
-    background-image: -webkit-linear-gradient(top, #3D94F6, #1E62D0);
-    background-image: -moz-linear-gradient(top, #3D94F6, #1E62D0);
-    background-image: -ms-linear-gradient(top, #3D94F6, #1E62D0);
-    background-image: -o-linear-gradient(top, #3D94F6, #1E62D0);
-    background-image: -webkit-gradient(to bottom, #3D94F6, #1E62D0);
+    background-image: -webkit-linear-gradient(top, #41aea9, #213e3b);
+    background-image: -moz-linear-gradient(top, #41aea9, #213e3b);
+    background-image: -ms-linear-gradient(top, #41aea9, #213e3b);
+    background-image: -o-linear-gradient(top, #41aea9, #213e3b);
+    background-image: -webkit-gradient(to bottom, #41aea9, #213e3b);
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 20px;
@@ -75,7 +75,7 @@ a {
     -moz-box-shadow: 1px 1px 20px 0 #000000;
     box-shadow: 1px 1px 20px 0 #000000;
     text-shadow: 1px 1px 20px #000000;
-    border: solid #337FED 1px;
+    border: solid #213e3b 1px;
     text-decoration: none;
     display: inline-block;
     cursor: pointer;
@@ -83,13 +83,13 @@ a {
  }
  
  .btn:hover {
-    border: solid #337FED 1px;
-    background: #1E62D0;
-    background-image: -webkit-linear-gradient(top, #1E62D0, #3D94F6);
-    background-image: -moz-linear-gradient(top, #1E62D0, #3D94F6);
-    background-image: -ms-linear-gradient(top, #1E62D0, #3D94F6);
-    background-image: -o-linear-gradient(top, #1E62D0, #3D94F6);
-    background-image: -webkit-gradient(to bottom, #1E62D0, #3D94F6);
+    border: solid #213e3b 1px;
+    background: #213e3b;
+    background-image: -webkit-linear-gradient(top, #213e3b, #41aea9);
+    background-image: -moz-linear-gradient(top, #213e3b, #41aea9);
+    background-image: -ms-linear-gradient(top, #213e3b, #41aea9);
+    background-image: -o-linear-gradient(top, #213e3b, #41aea9);
+    background-image: -webkit-gradient(to bottom, #213e3b, #41aea9);
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 20px;
